<resources>
    <string name="app_name">Branch Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="loans">Loans</string>
    <string name="invest">Invest</string>
    <string name="invite">Invite</string>
    <string name="home_caps">HOME</string>
    <string name="wallet_caps">WALLET</string>
    <string name="loans_caps">LOANS</string>
    <string name="invest_caps">INVEST</string>
    <string name="invite_caps">INVITE</string>
    <string name="amount_naira">₦5,000</string>
    <string name="zero_naira">₦0</string>
    <string name="loans_balance">Loan Balance</string>
    <string name="investments">Investments</string>
    <string name="next_payment_helper">Next payment due August 26</string>
    <string name="tap_to_make_your_payment">Tap to make your payment</string>
    <string name="earn_a_bonus">Earn a bonus</string>
    <string name="earn_a_bonus_helper">Earn a bonus: Invite your friends and earn</string>>
    <string name="new_caps">NEW</string>
    <string name="flex_investments">Flex Investments</string>
    <string name="invest_today_helper">Invest today and earn 20% p.a</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="wallet_withdrawal">Wallet withdrawal</string>
    <string name="_1_aug">1 Aug</string>
    <string name="branch_wallet">Branch Wallet</string>
    <string name="balance">Balance</string>
    <string name="add_funds">Add Funds</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="total_due">Total Due</string>
    <string name="dot">.</string>
    <string name="payment">Payment</string>
    <string name="payment_date">Payment Date</string>
    <string name="repayment_schedule">Repayment Schedule</string>
    <string name="loan_transactions">Loan Transactions</string>
    <string name="make_a_payment">Make a Payment</string>
    <string name="earn_investment_helper">Earn interest with no minimum investment or lockup period</string>
    <string name="investment_balance">Investment Balance</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="percent_twenty">20%</string>
    <string name="invest_from_branch">Invest from Branch Wallet</string>
    <string name="withdraw_from_branch">Withdraw from Branch Wallet</string>
    <string name="your_invite_code">Your invite code</string>
    <string name="ibrajix">IBRAJIX</string>
    <string name="earn_invite_helper">Earn a ₦250 bonus when friends you invite fund their Branch Wallet</string>
    <string name="invite_friends">Invite Friends</string>
</resources>